<resources>
    <string name="app_name">CommuteStatus</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_next">Toggle Trains</string>
    <string name="action_journeycheck">Journey Check</string>

    <string name="text_to_hockley">%1$s to Home</string>
    <string name="text_to_stratford">%1$s to Work</string>
    <string name="text_platform_stratford">%1$s</string>
    <string name="text_platform_hockley">%1$s</string>
    <string name="text_status_hockley">%1$s</string>
    <string name="text_status_stratford">%1$s</string>
    <string name="channel_name">Train updates</string>
    <string name="channel_description">Updates on current train statuses</string>
    <string name="action_set_work">Set Work Station</string>
    <string name="action_set_home">Set Home Station</string>
    <string name="work_crs">work_crs</string>
    <string name="home_crs">home_crs</string>
    <string name="preference_file_key">crs_prefs</string>
</resources>
